Implement multimodule structure, add library-test directory